--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
     "dev": "npx concurrently \"npm run server\" \"npm run start\""
   },
   "dependencies": {
-    "@angular/animations": "^18.1.0",
-    "@angular/common": "^18.1.0",
-    "@angular/compiler": "^18.1.0",
-    "@angular/core": "^18.1.0",
-    "@angular/forms": "^18.1.0",
-    "@angular/platform-browser": "^18.1.0",
-    "@angular/platform-browser-dynamic": "^18.1.0",
-    "@angular/router": "^18.1.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "rxjs": "^7.8.1",
-    "tslib": "^2.5.0",
-    "zone.js": "~0.14.0"
+    "@angular/animations": "18.1.0",
+    "@angular/common": "18.1.0",
+    "@angular/compiler": "18.1.0",
+    "@angular/core": "18.1.0",
+    "@angular/forms": "18.1.0",
+    "@angular/platform-browser": "18.1.0",
+    "@angular/platform-browser-dynamic": "18.1.0",
+    "@angular/router": "18.1.0",
+    "cors": "2.8.5",
+    "express": "4.18.2",
+    "rxjs": "7.8.1",
+    "tslib": "2.5.0",
+    "zone.js": "0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.1.0",
-    "@angular/cli": "^18.1.0",
-    "@angular/compiler-cli": "^18.1.0",
-    "@types/express": "^4.17.21",
-    "concurrently": "^8.2.2",
-    "typescript": "~5.5.0"
+    "@angular-devkit/build-angular": "18.1.0",
+    "@angular/cli": "18.1.0",
+    "@angular/compiler-cli": "18.1.0",
+    "@types/express": "4.17.21",
+    "concurrently": "8.2.2",
+    "typescript": "5.5.4"
   }
 }
